# ddqn-router

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  docs.yml  publish.yml
changelog/: index.html
cli/: index.html
configuration/: index.html
contributing/: index.html
ddqn_router/: __init__.py  agents.py  cli.py  config.py  scaffold.py
ddqn_router/baselines/: llm_router.py  random_router.py  rule_router.py  supervised_router.py
ddqn_router/dataset/: dataset.py  splitter.py
ddqn_router/env/: routing_env.py
ddqn_router/eval/: evaluator.py
ddqn_router/inference/: router.py
ddqn_router/labeler/: cache.py  labeler.py  prompt_template.j2
ddqn_router/rl/: ddqn_agent.py  q_network.py  replay_buffer.py  reward.py  state_encoder.py
ddqn_router/serve/: app.py
deployment/: index.html
docs/: changelog.md  cli.md  configuration.md  contributing.md  deployment.md  examples.md  index.md  python-api.md  quickstart.md  troubleshooting.md
examples/: README.md  colab_quickstart.ipynb  example_config.yaml  index.html  quickstart.ipynb  raw_texts.txt
examples/01_customer_support/: README.md  config.yaml  make_dataset.py
examples/02_it_helpdesk/: README.md  config.yaml  make_dataset.py
python-api/: index.html
quickstart/: index.html
search/: search_index.json
tests/: conftest.py  test_agents.py  test_cli.py  test_config.py  test_dataset.py  test_labeler_cache.py  test_labeler_parsing.py  test_router_inference.py  test_serve.py
troubleshooting/: index.html
