[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ddqn-router"
version = "0.1.0"
description = "Double DQN-based router for multi-agent systems"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "torch>=2.0",
    "scikit-learn>=1.3",
    "numpy",
    "typer>=0.9",
    "pydantic>=2.0",
    "jinja2",
    "httpx",
    "joblib",
    "pyyaml",
]

[project.optional-dependencies]
serve = ["fastapi", "uvicorn"]
dev = ["pytest", "pandas", "matplotlib", "tqdm"]

[project.scripts]
ddqn-router = "ddqn_router.cli:app"

[tool.setuptools.packages.find]
include = ["ddqn_router*"]
