[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddqn-router"
version = "0.2.0"
description = "Train a Double DQN router that selects an optimal subset of agents for any multi-agent system."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "Kirill", email = "" }
]
keywords = [
  "multi-agent-systems",
  "reinforcement-learning",
  "routing",
  "double-dqn",
  "llm",
  "agent-orchestration",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "torch>=2.0",
    "scikit-learn>=1.3",
    "numpy",
    "typer>=0.9",
    "pydantic>=2.0",
    "jinja2",
    "httpx",
    "joblib",
    "pyyaml",
]

[project.optional-dependencies]
serve = ["fastapi", "uvicorn"]
dev = ["pytest", "pandas", "matplotlib", "tqdm"]

[project.scripts]
ddqn-router = "ddqn_router.cli:app"

[project.urls]
Homepage = "https://github.com/kirmoz1997/ddqn-router"
Repository = "https://github.com/kirmoz1997/ddqn-router"
"Bug Tracker" = "https://github.com/kirmoz1997/ddqn-router/issues"
Research = "https://github.com/kirmoz1997/dqn_routing_research"

[tool.setuptools.packages.find]
include = ["ddqn_router*"]
